mine/kyle changes require/breakpoint/tables/links

--- a/views/confirmation.hbs
+++ b/views/confirmation.hbs
@@ -8,11 +8,11 @@
   
   <p>
     Your study room reservation at the IUK library was successful.<br>
-    An email with your confirmation number has been sent.<br><br>
+    An email with your confirmation number has been sent.<br>
     <div class="row">
     
         <div class="col-md-12">
-            <table style="width: 35%;">
+            <table style="width: 25%;">
                 <thead>
                    <h2>Reservation Information:</h2>
                    <br>
@@ -41,7 +41,7 @@
         {{/unless}}
     </div>
 
-    <img src="/images/Icons8_flat_approval.png"> 
+    <img src="/images/Icons8_flat_approval.png"  alt ="Confirmation Symbol"> 
 </p>
 <div>
     <a href = "/"><button class="rvt-button">Return to Home </button></a>
