--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -109,6 +109,9 @@
         div{
           text-align: center;
         }
+
+        @media only screen and (max-width: 1079px) {
+        }
       </style>
     </header>
   </header>
@@ -118,7 +121,7 @@
     To make another reservation, please click "Return to Home"<br>
     to fill out a new form.
 </p>
-<img src="/images/Icons8_flat_approval.png"> 
+<img src="/images/Icons8_flat_approval.png" alt ="Confirmation Symbol"> 
 <div>
     <a href = "/"><button class="rvt-button">Return to Home </button></a>
 </div>
