--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -8,7 +8,7 @@
         <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
         <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta.2/css/rivet.min.css">
         <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
-            </head>
+        </head>
       <body class="rvt-layout">
       
       <header class="rvt-header-wrapper">
@@ -108,23 +108,26 @@
           div{
             text-align: center;
           }
+
+          @media only screen and (max-width: 1079px) {
+          }
         </style>
       </header>
 <body>
   <h1>Study Room Cancelation</h1>
-<p>To cancel your study room reservation, enter the following information<br>
-   and click "Add Cancelation". If you do NOT wish to cancel your study room<br>
+<p>To cancel your study room reservation, enter the following information
+   and click "Add Cancelation". If you do NOT wish to cancel your study room
     reservation, click "Return to Home".</p>
-<form method="post" action="/cancelation">    
+<form method="post"action="/cancelation">    
     <fieldset>
   <label for="idnum" class="rvt-label">Student ID Number</label><br>
-  <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
+  <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10 required><br><br>
   <label for="confirmation" class="rvt-label">Confirmation Number</label><br>
-  <input type="number" id="confirmation" name="confirmation" class="rvt-label" placeholder="98765" maxlength=5><br><br>
+  <input type="number" id="confirmation" name="confirmation" class="rvt-label" placeholder="98765" maxlength=5 required><br><br>
   </fieldset>
     <input type="submit" class="rvt-button rvt-button--success" value="Add Cancelation" />
-</form>
-<a href = "/"><button class="rvt-button">Return to Home</button></a> 
+</form><br>
+<a href = "/"><button class="rvt-button">Return to Home</button></a><br> 
 </body>
 
 
