--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -120,13 +120,10 @@
         th {
             text-align: center;
         }
-        @media only screen and (max-width: 1079px) {
-        table{
-          padding: 0px;
-          display: table;
-          white-space: nowrap;
+
+        @media screen and (max-width: 1079px) {
+        
         }
-    
       </style>
   </header>
   <div>
