--- a/views/reservations.html
+++ b/views/reservations.html
@@ -219,7 +219,7 @@
 
   <form method="post" action="/reservations">
     
-    <fieldset>
+    <fieldset style="border-width:0px" >
     <label for="date" class="rvt-label">Enter the date of the study room reservation:</label><br>
     <input type="date" id="date" name="date"required ><br></br>
     <script>
