Element styling/added legend

--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -122,8 +122,19 @@
 <div>
     <a href = "/"><button class="rvt-button">Return to Home </button></a>
 </div>
+
+<!--this is ghetto I know but this page footer won't stay down-->
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
 </body>
-<footer class="rvt-footer-base">
+
+<footer class="rvt-footer-base rvt-m-tb-xxl">
   <div class="rvt-container-lg">
       <div class="rvt-footer-base__inner">
           <div class="rvt-footer-base__logo">
