--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
         <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
         <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta.2/css/rivet.min.css">
         <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
-            </head>
+    </head>
       <body class="rvt-layout">
       
       <header class="rvt-header-wrapper">
@@ -60,8 +60,6 @@
                               </svg>
                           </button>
       
-                          
-      
                           <nav aria-label="Main" class="rvt-header-menu" data-rvt-disclosure-target="menu" hidden>
                               <ul class="rvt-header-menu__list">
                                   <li class="rvt-header-menu__item">
@@ -108,30 +106,37 @@
           div{
             text-align: center;
           }
+
+          .footer{
+              padding-bottom: 0px;
+              white-space: nowrap;
+          }
         </style>
       </header>
-<body>
-  <h1>Study Room Cancelation</h1>
-<p>To cancel your study room reservation, enter the following information<br>
-   and click "Add Cancelation". If you do NOT wish to cancel your study room<br>
-    reservation, click "Return to Home".</p>
+
+
+    <h1>Study Room Cancelation</h1>
+    <p>To cancel your study room reservation, complete the form
+   then click "Add Cancelation".<br>If you do NOT wish to cancel your study room reservation, click "Return to Home".</p>
+    
 <form method="post" action="/cancelation">    
-    <fieldset>
+<fieldset>
+    <legend>Please enter the following information:</legend>
+        <br></br>
   <label for="idnum" class="rvt-label">Student ID Number</label><br>
   <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
   <label for="confirmation" class="rvt-label">Confirmation Number</label><br>
   <input type="number" id="confirmation" name="confirmation" class="rvt-label" placeholder="98765" maxlength=5><br><br>
-  </fieldset>
+
+</fieldset>
+<br></br>
+
+    <div class="buttons">
     <input type="submit" class="rvt-button rvt-button--success" value="Add Cancelation" />
 </form>
 <a href = "/"><button class="rvt-button">Return to Home</button></a> 
-</body>
-
-
-<!-- **************************************************************************
-    Footer: Copyright
-    -> v2.rivet.iu.edu/docs/components/footer/
-**************************************************************************** -->
+    </div>
+<br></br>
 
 <footer class="rvt-footer-base">
     <div class="rvt-container-lg">
@@ -141,23 +146,23 @@
                     <polygon fill="currentColor" points="15.3 3.19 15.3 5 16.55 5 16.55 15.07 13.9 15.07 13.9 1.81 15.31 1.81 15.31 0 8.72 0 8.72 1.81 10.12 1.81 10.12 15.07 7.45 15.07 7.45 5 8.7 5 8.7 3.19 2.5 3.19 2.5 5 3.9 5 3.9 16.66 6.18 18.98 10.12 18.98 10.12 21.67 8.72 21.67 8.72 24 15.3 24 15.3 21.67 13.9 21.67 13.9 18.98 17.82 18.98 20.09 16.66 20.09 5 21.5 5 21.5 3.19 15.3 3.19" fill="#231f20" />
                 </svg>
             </div>
-            <ul class="rvt-footer-base__list">
-                <li class="rvt-footer-base__item">
-                    <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
-                </li>
-                <li class="rvt-footer-base__item">
-                    <a class="rvt-footer-base__link" href="https://www.iuk.edu/uits/privacy-policy.html/">Privacy Notice</a>
-                </li>
-                <li class="rvt-footer-base__item">
-                    Copyright</a> © 2021 The Trustees of Indiana University
-                </li>
-            </ul>
+           <ul class="rvt-footer-base__list">
+                  <li class="rvt-footer-base__item">
+                      <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
+                  </li>
+                  <li class="rvt-footer-base__item">
+                      <a class="rvt-footer-base__link" href="https://www.iuk.edu/uits/privacy-policy.html/">Privacy Notice</a>
+                  </li>
+                  <li class="rvt-footer-base__item">
+                      Copyright</a> © 2021 The Trustees of Indiana University
+                  </li>
+              </ul>
         </div>
     </div>
 </footer>
 <script src="https://unpkg.com/rivet-core@2.0.0-beta.2/js/rivet.min.js"></script>
 <script>
-  Rivet.init();
+Rivet.init();
 </script>
 </body>
 </html>
