--- a/views/reservations.html
+++ b/views/reservations.html
@@ -64,10 +64,6 @@
                         </svg>
                     </button>
 
-                    <!-- ******************************************************
-                        Primary navigation
-                    ******************************************************* -->
-
                     <nav aria-label="Main" class="rvt-header-menu" data-rvt-disclosure-target="menu" hidden>
                         <ul class="rvt-header-menu__list">
                             <li class="rvt-header-menu__item">
@@ -124,17 +120,14 @@
 </header>
 
 
-
-
-
-<body>
   <h1>Study Room Reservations</h1>
-  <h2>Room Information</h2>
-  <p>Please enter the following information:</p>
+  <h2>Room Information<br></br></h2>
 
   <form method="post" action="/reservations">
     
     <fieldset>
+        <legend>Please enter the following information:</legend>
+        <br></br>
     <label for="date" class="rvt-label">Enter the date of the study room reservation:</label><br>
     <input type="date" id="date" name="date"><br></br>
     <script>
@@ -202,12 +195,15 @@
         
     </br>
     </fieldset>
+    <br></br>
+
+    <div class="buttons">
     <input type="submit" class="rvt-button rvt-button--success" value="Continue" />
   </form>
-  <a href = "/"><button class="rvt-button">Return to Home</button></a> 
-  <div>
   
-
+  <a href = "/"><button class="rvt-button">Return to Home</button></a> 
+    </div>
+  <br></br>
 
 <footer class="rvt-footer-base">
   <div class="rvt-container-lg">
@@ -235,3 +231,5 @@
 <script>
 Rivet.init();
 </script>
+</body>
+</html>
