--- a/views/index.html
+++ b/views/index.html
@@ -118,6 +118,11 @@
         text-align: center; 
         background-color: #006298; 
         color: white;
+        }
+
+        ul{
+          text-align: left;
+        }
         
         @media all and (max-width: 1079px) {
         table{
@@ -130,7 +135,6 @@
             font-size: 20px;
           }
         }
-    }
       </style>
   </header>
     <!--Main content area-->
@@ -147,6 +151,8 @@
                 <div class="rvt-border-all rvt-m-top-md rvt-p-all-md rvt-shadow-heavy rvt-p-all-lg rvt-m-bottom-lg">
                     
                     <a href="/reservations" class="rvt-button">Reserve a Study Room</a>
+
+                    <a href="/edithome" class="rvt-button">Edit Existing Study Room</a>
     
                     <a href="/cancelation" class="rvt-button">Cancel Existing Study Room</a>
     
@@ -220,7 +226,7 @@
               </button>
             </h3>
             <div class="rvt-accordion__panel" id="test-accordion-3" aria-labelledby="test-accordion-3-label" data-rvt-accordion-panel="test-accordion-3">
-              <p class="rvt-m-all-remove">All study rooms are available for use from the opening of the Library until ten (10) minutes before closing
+              <p class="rvt-m-all-remove" style="text-align:left">All study rooms are available for use from the opening of the Library until ten (10) minutes before closing
                 Study rooms are available for IU Kokomo Students only.
                 Reservations accepted Monday – Friday.<br></br>
                 The study rooms below may be reserved for half-hour increments, up to three consecutive hours per day, three times per week (Monday – Friday), per individual or group. When not reserved, and all day on Saturday and Sunday, all study rooms are available on a first-come, first-served basis.
@@ -228,12 +234,11 @@
             </div>
           </div>
         </div>
-        <br>
     
                   <!-- Library Hours table -->
                   <table style="width: 30%;">
                     <tr>
-                      <th colspan="2" style ="font-weight: bold;">Library Hours</th>
+                      <th colspan="2" style ="font-weight: bold;">Fall/Spring Library Hours</th>
                     </tr>
                     <tr>
                       <td>Monday</td>
@@ -264,10 +269,10 @@
                       <td>1&#8212;7 pm</td>
                     </tr>
                   </table>
+
+            <p style="font-weight:bold">For additional information about library hours click <a href="https://www.iuk.edu/library/visit/hours.html">here</a></p>
             </div>
-           
         </div>
-    
     </main>
     
     
