emma's final updates

--- a/views/confirmation.hbs
+++ b/views/confirmation.hbs
@@ -41,7 +41,7 @@
         {{/unless}}
     </div>
 
-    <img src="/images/Icons8_flat_approval.png"  alt ="Confirmation Symbol"> 
+    <img src="/images/Icons8_flat_approval.png"  alt ="Confirmation Symbol" style="width:128px;height:128px;"> 
 </p>
 <div>
     <a href = "/"><button class="rvt-button">Return to Home </button></a>
