--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -121,7 +121,7 @@
     To make another reservation, please click "Return to Home"<br>
     to fill out a new form.
 </p>
-<img src="/images/Icons8_flat_approval.png" alt ="Confirmation Symbol"> 
+<img src="/images/Icons8_flat_approval.png" alt ="Confirmation Symbol" style="width:128px;height:128px;"> 
 <div>
     <a href = "/"><button class="rvt-button">Return to Home </button></a>
 </div>
