--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -107,6 +107,12 @@
         div{
           text-align: center;
         }
+         .cBox{
+            padding-left: 25%;
+            padding-right: 25%;
+            
+          }
+          
         table {
             margin-left: auto;
             margin-right: auto;
