--- a/views/reservations.html
+++ b/views/reservations.html
@@ -114,16 +114,28 @@
       div{
         text-align: center;
       }
+      .cBox{
+            padding-left: 25%;
+            padding-right: 25%;
+            
+          }
       table{
         border: 1px solid;
         margin-left: auto;
         margin-right: auto;
       }
 
+      td{
+        height: 1px;
+        font-size: small;
+        text-align: center;
+      }
+
       th{
         text-align: center; 
         background-color: #006298; 
         color: white;
+        font-size: small;
 
       }
 
@@ -139,82 +151,6 @@
 <body>
   <h1>Study Room Reservations</h1>
   <h2>Room Information</h2>
-
-  <!-- Study room description table -->
-  <table style="max-width: 30%;">
-    <tr>
-      <th colspan="3" style ="font-weight: bold;">First Floor</th>
-    </tr>
-    <tr>
-      <td>KA 116</td>
-      <td>Lobby area</td>
-      <td>8</td>
-    </tr>
-    <tr>
-      <td>KA 118</td>
-      <td>Lobby area</td>
-      <td>8</td>
-    </tr>
-    <tr>
-      <td>KA 147</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 149</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 155</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 157</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 159</td>
-      <td>West Commons</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>KA 160</td>
-      <td>West Commons</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>KA 161</td>
-      <td>West Commons</td>
-      <td>2</td>
-    </tr>
-      <tr>
-        <th colspan="3" style ="font-weight: bold;">Second Floor</th>
-      </tr>
-      <tr>
-        <td>KA 220</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-      <tr>
-        <td>KA 222</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-      <tr>
-        <td>KA 224</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-      <tr>
-        <td>KA 226</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-  </table>
-
   <p>Please enter the following information:</p>
 
   <form method="post" action="/reservations">
@@ -279,18 +215,98 @@
         <option value="KA149">
         <option value="KA155">
         <option value="KA157">
+      <option value="KA159">
+       <option value="KA160">
+       <option value="KA161">
         <option value="KA220">
         <option value="KA222">
         <option value="KA224">
         <option value="KA226">
         </datalist>
         
-    </br>
     </fieldset>
+
+      <!-- Study room description table -->
+  <table style="max-width: 60%;">
+    <tr>
+      <th colspan="1" style ="font-weight: bold;">Room Number</th>
+      <th colspan="2" style ="font-weight: bold;">Room Location</th>
+      <th colspan="3" style ="font-weight: bold;">Room Capacity</th>
+
+
+    </tr>
+    <tr>
+      <td>KA 116</td>
+      <td>Lobby Area (First Floor)</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td>KA 118</td>
+      <td>Lobby Area (First Floor)</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td>KA 147</td>
+      <td>West Commons (First Floor)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 149</td>
+      <td>West Commons (First Floor)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 155</td>
+      <td>West Commons (First Floor)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 157</td>
+      <td>West Commons (First Floor)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 159</td>
+      <td>West Commons (First Floor)</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>KA 160</td>
+      <td>West Commons (First Floor)</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>KA 161</td>
+      <td>West Commons (First Floor)</td>
+      <td>2</td>
+    </tr>
+      <tr>
+        <td>KA 220</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 222</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 224</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 226</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <div>
+  </table>
+  <br/>
     <input type="submit" class="rvt-button rvt-button--success" value="Continue" />
   </form>
+  <br/>
   <a href = "/"><button class="rvt-button">Return to Home</button></a> 
-  <div>
     <br>
   </body>
 
