--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -110,6 +110,11 @@
         div{
           text-align: center;
         }
+        .cBox{
+            padding-left: 25%;
+            padding-right: 25%;
+            
+          }
 
         @media only screen and (max-width: 1079px) {
         }
@@ -120,6 +125,7 @@
     <h1>Study Room Reservations</h1>
     <h2>Student Information</h2>
     <p>Please enter the following information:</p>
+    <div class="cBox">
     <form method="post" action="/studentinfo">
     
     <fieldset>
@@ -139,7 +145,6 @@
 <input type="submit" class="rvt-button rvt-button--success" value="Add Reservation" />
 </form>
 <a href = "/reservations"><button class="rvt-button">Go Back </button></a>  
-<div>
 </div>
 </body>
 
