--- a/views/reservations.html
+++ b/views/reservations.html
@@ -114,24 +114,38 @@
       div{
         text-align: center;
       }
+
       table{
         border: 1px solid;
-        margin-left: auto;
-        margin-right: auto;
+        float: left;
+        width: 45%;
+        margin-right: 1%;
+        margin-left: 1%;
+      }
+
+      #studyRoomTable{
+        margin: auto;
+        width: 45%;
       }
 
       th{
         text-align: center; 
         background-color: #006298; 
         color: white;
-
       }
 
       @media only screen and (max-width: 1079px) {
+
+        #studyRoomTable{
+          margin-top: 1%;
+          margin-bottom: 1%;
+      }
+      
         table{
           padding: 0px;
           display: table;
           white-space: nowrap;
+          max-width: 45%;
         }
     }
     </style>
@@ -140,8 +154,8 @@
   <h1>Study Room Reservations</h1>
   <h2>Room Information</h2>
 
-  <!-- Study room description table -->
-  <table style="max-width: 30%;">
+  <div id="studyRoomTable">
+  <table>
     <tr>
       <th colspan="3" style ="font-weight: bold;">First Floor</th>
     </tr>
@@ -190,6 +204,8 @@
       <td>West Commons</td>
       <td>2</td>
     </tr>
+  </table>
+  <table>
       <tr>
         <th colspan="3" style ="font-weight: bold;">Second Floor</th>
       </tr>
@@ -214,6 +230,7 @@
         <td>6</td>
       </tr>
   </table>
+  </div>
 
   <p>Please enter the following information:</p>
 
