--- a/views/reservations.html
+++ b/views/reservations.html
@@ -256,8 +256,12 @@
         var futureDate = dateYear + "-" + futureMonth + "-" + dateDay;
         document.getElementById("date").setAttribute("max", futureDate);
     </script>
-    <button type="button" onclick="getDesiredDate();">Check Available Times</button>
+    <button type="button" onclick="getDesiredDate();showTimes();">Check Available Times</button>
     <script>
+      function showTimes(){
+        document.getElementById('timesDiv').style.display = "block";
+      };
+
       function getDesiredDate(){
           var desiredDate= "";
           desiredDate =document.getElementById("date").value;
@@ -325,8 +329,10 @@
       }
   </script>
   <br>
-  <label for="time" class="rvt-label">Select the time of the reservation:</label><br>
+  <div id="timesDiv" style="display:none;">
+    <label for="time" class="rvt-label">Select the time of the reservation:</label><br>
   <input type="time" id="time" name="time" class="rvt-label" required><br></br>
+  </div>  
   <label for="numpeople" class="rvt-label">Select the number of people in the reservation:</label><br>
       <input list="numpeople" name="numpeople" placeholder="Select people in reservation" required><br></br>
       <datalist id="numpeople">
