--- a/views/updatefailure.hbs
+++ b/views/updatefailure.hbs
@@ -1,9 +1,10 @@
 <body>
     <h1>Failure to Update Study Room Information</h1>
+<div class="cBox">
 
     <p>There was an error in updating your study room reservation information.
         Please ensure all information entered are correct and try again. 
     </p>
-
+</div>
     <a href = "/"><button class="rvt-button">Return to Home</button></a>
 </body>
