--- a/views/reservations.html
+++ b/views/reservations.html
@@ -114,16 +114,28 @@
       div{
         text-align: center;
       }
+      .cBox{
+            padding-left: 25%;
+            padding-right: 25%;
+            
+          }
       table{
         border: 1px solid;
         margin-left: auto;
         margin-right: auto;
       }
 
+      td{
+        height: 1px;
+        font-size: small;
+        text-align: center;
+      }
+
       th{
         text-align: center; 
         background-color: #006298; 
         color: white;
+        font-size: small;
 
       }
 
@@ -139,85 +151,6 @@
 <body>
   <h1>Study Room Reservations</h1>
   <h2>Room Information</h2>
-
-  <!-- Study room description table -->
-  <table style="max-width: 30%;">
-    <tr>
-      <th colspan="3" style ="font-weight: bold;">First Floor</th>
-    </tr>
-    <tr>
-      <td>KA 116</td>
-      <td>Lobby area</td>
-      <td>8</td>
-    </tr>
-    <tr>
-      <td>KA 118</td>
-      <td>Lobby area</td>
-      <td>8</td>
-    </tr>
-    <tr>
-      <td>KA 147</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 149</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 155</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 157</td>
-      <td>West Commons</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>KA 159</td>
-      <td>West Commons</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>KA 160</td>
-      <td>West Commons</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>KA 161</td>
-      <td>West Commons</td>
-      <td>2</td>
-    </tr>
-    </table>
-
-    <table style="max-width: 30%;">
-      <tr>
-        <th colspan="3" style ="font-weight: bold;">Second Floor</th>
-      </tr>
-      <tr>
-        <td>KA 220</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-      <tr>
-        <td>KA 222</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-      <tr>
-        <td>KA 224</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-      <tr>
-        <td>KA 226</td>
-        <td>    </td>
-        <td>6</td>
-      </tr>
-  </table>
-
   <p>Please enter the following information:</p>
 
   <form method="post" action="/reservations">
@@ -227,6 +160,7 @@
     <input type="date" id="date" name="date"required ><br></br>
     <script>
         var date  = new Date();
+        console.log(date)
         var dateDay = date.getDate();
         if (dateDay < 10)
         {
@@ -253,86 +187,12 @@
         {
             futureMonth = 2;
         }
+        console.log(futureMonth);
         var futureDate = dateYear + "-" + futureMonth + "-" + dateDay;
         document.getElementById("date").setAttribute("max", futureDate);
     </script>
-    <button type="button" onclick="getDesiredDate();showTimes();">Check Available Times</button>
-    <script>
-      function showTimes(){
-        document.getElementById('timesDiv').style.display = "block";
-      };
-
-      function getDesiredDate(){
-          var desiredDate= "";
-          desiredDate =document.getElementById("date").value;
-         var desiredDateDay = new Date(desiredDate).getDay();
-          console.log(desiredDateDay);
-          if (desiredDateDay == 0 || desiredDateDay == 1 || desiredDateDay == 2 || desiredDateDay == 3){
-            document.getElementById("time").setAttribute("min", "08:00");
-            document.getElementById("time").setAttribute("max","21:00");
-          }
-          else if(desiredDateDay == 4){
-            document.getElementById("time").setAttribute("min", "08:00");
-            document.getElementById("time").setAttribute("max","17:00");
-          }
-          else if (desiredDateDay == 5){
-            document.getElementById("time").setAttribute("min", "12:00");
-            document.getElementById("time").setAttribute("max","17:00");
-          }
-          else if (desiredDateDay == 6) {
-            document.getElementById("time").setAttribute("min", "13:00");
-            document.getElementById("time").setAttribute("max","19:00");
-          }
-          var date  = new Date();
-        var dateDay = date.getDate();
-        if (dateDay < 10)
-        {
-            dateDay = "0" + dateDay;
-        }
-        var dateMonth = date.getMonth() + 1;
-        if (dateMonth < 10)
-        {
-            dateMonth = "0" + dateMonth;
-        }
-        var dateYear = date.getFullYear();
-        var currDate = dateYear + "-" + dateMonth + "-" + dateDay;
-        console.log(currDate);
-        var dDateDay = new Date(desiredDate).getDate();
-        var dDateMonth = new Date(desiredDate).getMonth();
-        var dDateYear = new Date(desiredDate).getFullYear();
-        dDateDay = dDateDay + 1;
-        if (dDateDay < 10)
-        {
-            dDateDay = "0" + dDateDay;
-        }
-        dDateMonth = dDateMonth + 1;
-        if (dDateMonth < 10)
-        {
-            dDateMonth = "0" + dDateMonth;
-        }
-        var resDate = dDateYear + "-" + dDateMonth + "-" + dDateDay;
-        console.log(resDate);
-        if (currDate == resDate)
-        {
-          var timeHour = new Date().getHours();
-          if (timeHour < 10){
-            timeHour = "0" + timeHour;
-          }
-          var timeMinutes = new Date().getMinutes();
-          if (timeMinutes <10){
-            timeMinutes = "0" + timeMinutes;
-          }
-          var dateTime = timeHour + ":" + timeMinutes;
-          console.log(dateTime);
-          document.getElementById("time").setAttribute("min", dateTime);
-        }
-      }
-  </script>
-  <br>
-  <div id="timesDiv" style="display:none;">
-    <label for="time" class="rvt-label">Select the time of the reservation:</label><br>
+  <label for="time" class="rvt-label">Select the time of the reservation:</label><br>
   <input type="time" id="time" name="time" class="rvt-label" required><br></br>
-  </div>  
   <label for="numpeople" class="rvt-label">Select the number of people in the reservation:</label><br>
       <input list="numpeople" name="numpeople" placeholder="Select people in reservation" required><br></br>
       <datalist id="numpeople">
@@ -355,18 +215,98 @@
         <option value="KA149">
         <option value="KA155">
         <option value="KA157">
+       <option value="KA159">
+       <option value="KA160">
+       <option value="KA161">
         <option value="KA220">
         <option value="KA222">
         <option value="KA224">
         <option value="KA226">
         </datalist>
         
-    </br>
     </fieldset>
+
+      <!-- Study room description table -->
+  <table style="max-width: 60%;">
+    <tr>
+      <th colspan="1" style ="font-weight: bold;">Room Number</th>
+      <th colspan="2" style ="font-weight: bold;">Room Location</th>
+      <th colspan="3" style ="font-weight: bold;">Room Capacity</th>
+
+
+    </tr>
+    <tr>
+      <td>KA 116</td>
+      <td>First Floor (Lobby Area)</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td>KA 118</td>
+      <td>First Floor (Lobby Area)</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td>KA 147</td>
+      <td>First Floor (West Commons)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 149</td>
+      <td>First Floor (West Commons)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 155</td>
+      <td>First Floor (West Commons)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 157</td>
+      <td>First Floor (West Commons)</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 159</td>
+      <td>First Floor (West Commons)</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>KA 160</td>
+      <td>First Floor (West Commons)</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>KA 161</td>
+      <td>First Floor (West Commons)</td>
+      <td>2</td>
+    </tr>
+      <tr>
+        <td>KA 220</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 222</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 224</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 226</td>
+        <td>Second Floor</td>
+        <td>6</td>
+      </tr>
+      <div>
+  </table>
+  <br/>
     <input type="submit" class="rvt-button rvt-button--success" value="Continue" />
   </form>
+  <br/>
   <a href = "/"><button class="rvt-button">Return to Home</button></a> 
-  <div>
     <br>
   </body>
 
